# WinObjC

./: .gitignore  .gitmodules  .lfsconfig  CMakeLists.txt
Frameworks/: CMakeLists.txt
Frameworks/AVFoundation/: CMakeLists.txt
Frameworks/AVKit/: CMakeLists.txt
Frameworks/Accelerate/: CMakeLists.txt
Frameworks/Accounts/: CMakeLists.txt
Frameworks/AdSupport/: CMakeLists.txt
Frameworks/AddressBook/: CMakeLists.txt
Frameworks/AddressBookUI/: CMakeLists.txt
Frameworks/AssetsLibrary/: CMakeLists.txt
Frameworks/AudioToolbox/: CMakeLists.txt  SystemSound.mm
Frameworks/AudioUnit/: CMakeLists.txt
Frameworks/AutoLayout/: CMakeLists.txt
Frameworks/CFNetwork/: CMakeLists.txt
Frameworks/CloudKit/: CMakeLists.txt
Frameworks/Contacts/: CMakeLists.txt
Frameworks/CoreAudio/: CMakeLists.txt
Frameworks/CoreAudioKit/: CMakeLists.txt
Frameworks/CoreBluetooth/: CMakeLists.txt
Frameworks/CoreData/: CMakeLists.txt  CoreDataConstants.mm
Frameworks/CoreFoundation/: CMakeLists.txt
Frameworks/CoreFoundation/Base.subproj/: CFBridgeUtilities.h  CFInternal.h  CFPlatform.c  CFRuntime.c
Frameworks/CoreFoundation/RunLoop.subproj/: CFRunLoop.c
Frameworks/CoreFoundationAdditions/: CMakeLists.txt
Frameworks/CoreGraphics/: CMakeLists.txt
Frameworks/CoreImage/: CMakeLists.txt
Frameworks/CoreLocation/: CMakeLists.txt
Frameworks/CoreMIDI/: CMakeLists.txt
Frameworks/CoreMedia/: CMakeLists.txt
Frameworks/CoreMotion/: CMakeLists.txt
Frameworks/CoreTelephony/: CMakeLists.txt
Frameworks/CoreText/: CMakeLists.txt
Frameworks/CoreVideo/: CMakeLists.txt
Frameworks/EventKit/: CMakeLists.txt
Frameworks/EventKitUI/: CMakeLists.txt
Frameworks/Foundation/: CMakeLists.txt  NSCFCalendar.mm  NSInvocation.mm  NSMutableString.mm  NSNull.mm  NSObject.mm  NSThread.mm  _NSInvocation.x86.asm
Frameworks/GLKit/: CMakeLists.txt
Frameworks/GameController/: CMakeLists.txt
Frameworks/GameKit/: CMakeLists.txt
Frameworks/GamePlayKit/: CMakeLists.txt
Frameworks/HealthKit/: CMakeLists.txt
Frameworks/HomeKit/: CMakeLists.txt
Frameworks/ImageIO/: CMakeLists.txt
Frameworks/LocalAuthentication/: CMakeLists.txt
Frameworks/MapKit/: CMakeLists.txt
Frameworks/MediaAccessibility/: CMakeLists.txt
Frameworks/MediaPlayer/: CMakeLists.txt
Frameworks/MessageUI/: CMakeLists.txt
Frameworks/Metal/: CMakeLists.txt
Frameworks/MobileCoreServices/: CMakeLists.txt
Frameworks/OpenGLES/: CMakeLists.txt
Frameworks/QuartzCore/: CALayer.mm  CMakeLists.txt
Frameworks/QuickLook/: CMakeLists.txt
Frameworks/SafariServices/: CMakeLists.txt
Frameworks/Security/: CMakeLists.txt
Frameworks/Social/: CMakeLists.txt
Frameworks/Social.Xaml/prebuilt/: ShareSheet.xbf  Social.Xaml.lib
Frameworks/Social.Xaml/prebuilt/Debug/: ShareSheet.xbf  Social.Xaml.lib
Frameworks/Social.Xaml/prebuilt/Release/: ShareSheet.xbf  Social.Xaml.lib
Frameworks/Starboard/: CMakeLists.txt
Frameworks/StoreKit/: CMakeLists.txt
Frameworks/SystemConfiguration/: CMakeLists.txt
Frameworks/Twitter/: CMakeLists.txt
Frameworks/UIKit/: CMakeLists.txt  ForceInclusion.mm  UIColor.mm  UINavigationController.mm  UINibUnarchiver.mm  UIView.mm
Frameworks/UIKit.Xaml/prebuilt/: ActivityIndicatorView.xbf  Button.xbf  ContentDialog.xbf  Label.xbf  Layer.xbf  ProgressView.xbf  ScrollView.xbf  Slider.xbf  TextField.xbf  UIKit.Xaml.lib
Frameworks/UIKit.Xaml/prebuilt/Debug/: ContentDialog.xbf  Layer.xbf  Slider.xbf  UIKit.Xaml.lib  UIKit.Xaml.winmd
Frameworks/UIKit.Xaml/prebuilt/Debug/Themes/: Generic.xbf
Frameworks/UIKit.Xaml/prebuilt/Release/: ActivityIndicatorView.xbf  Button.xbf  ContentDialog.xbf  Label.xbf  Layer.xbf  ProgressView.xbf  ScrollView.xbf  Slider.xbf  TextField.xbf  UIKit.Xaml.lib  UIKit.Xaml.winmd
Frameworks/UIKit.Xaml/prebuilt/Release/Themes/: Generic.xbf
Frameworks/UIKit.Xaml/prebuilt/Themes/: Generic.xbf
Frameworks/UIKit/StarboardXaml/: ApplicationMain.mm  UWPBackgroundTask.mm
Frameworks/WebKit/: CMakeLists.txt
Frameworks/iAd/: CMakeLists.txt
Frameworks/include/: BridgeHelpers.h
include/: pthread.h
include/AddressBookUI/: ABPersonViewController.h
include/Foundation/: NSObject.h
include/UIKit/: UIMenuController.h
msvc/: sdk-build.props
samples/HelloUI/HelloUI/: main.m
samples/HelloUI/HelloUI.vsimporter/HelloUI-WinStore10/: HelloUI.vcxproj
tools/: CMakeLists.txt
tools/AppInsights/: CMakeLists.txt
tools/Logging/: CMakeLists.txt
tools/Logging/dll/: Telemetry.cpp
tools/WOCStdLib/: CMakeLists.txt
tools/WinObjC.Language/assets/: Islandwood.props  Islandwood.targets  WinObjC.ObjectiveC.targets
tools/WinObjCRT/: CMakeLists.txt
tools/include/WOCStdLib/sys/: _pthreadtypes.h  cdefs.h
tools/include_next/WOCStdLib/: Dxgi1_3.h
