# Note that this is actually included from the root `CMakeLists.txt` as well as
# from the parent directory. The difference is that once `CL_COMPILER` is set to
# `OFF` and the other time to `ON`, respectively.

add_subdirectory (Accelerate)
add_subdirectory (Accounts)
add_subdirectory (AddressBook)
add_subdirectory (AddressBookUI)
add_subdirectory (AdSupport)
add_subdirectory (AssetsLibrary)
add_subdirectory (AudioToolbox)
add_subdirectory (AudioUnit)
add_subdirectory (AutoLayout)
add_subdirectory (AVFoundation)
add_subdirectory (AVKit)
add_subdirectory (CFNetwork)
add_subdirectory (CloudKit)
add_subdirectory (Contacts)
add_subdirectory (CoreAudio)
add_subdirectory (CoreAudioKit)
add_subdirectory (CoreBluetooth)
add_subdirectory (CoreData)
add_subdirectory (CoreFoundation)
add_subdirectory (CoreFoundationAdditions)
add_subdirectory (CoreGraphics)
add_subdirectory (CoreImage)
add_subdirectory (CoreLocation)
add_subdirectory (CoreMedia)
add_subdirectory (CoreMIDI)
add_subdirectory (CoreMotion)
add_subdirectory (CoreTelephony)
add_subdirectory (CoreText)
add_subdirectory (CoreVideo)
add_subdirectory (EventKit)
add_subdirectory (EventKitUI)
add_subdirectory (Foundation)
add_subdirectory (GameController)
add_subdirectory (GameKit)
add_subdirectory (GamePlayKit)
add_subdirectory (GLKit)
add_subdirectory (HealthKit)
add_subdirectory (HomeKit)
add_subdirectory (iAd)
add_subdirectory (ImageIO)
add_subdirectory (LocalAuthentication)
add_subdirectory (MapKit)
add_subdirectory (MediaAccessibility)
add_subdirectory (MobileCoreServices)
add_subdirectory (Starboard)
